--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -145,7 +145,7 @@
     <string name="tour_access_title">MEGA ACCESS</string>
     <string name="tour_space_text">Register now and get 50 GB of free space</string>
     <string name="tour_speed_text">Uploads are fast. Quickly share files with everyone</string>
-    <string name="tour_privacy_text">Keep all you files safe with MEGA\'s end-to-end encryption</string>
+    <string name="tour_privacy_text">Keep all your files safe with MEGA\'s end-to-end encryption</string>
     <string name="tour_access_text">Get fully encrypted access anywhere, anytime</string>
     
     <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
