--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -356,6 +356,7 @@
     <string name="select_membership_2" context="button to go to Google Play">Subscrição do Google Play</string>
     
     <string name="select_payment_method" context="after choosing one PRO plan, the user have to choose the payment method: credit card, fortumo, etc">Select payment method</string>
+    <string name="no_available_payment_method" context="choose the payment method option when no method is available">At this moment, no method of payment is available for this plan</string>
     <string name="payment_method_credit_card" context="one of the payment methods">Credit Card (subscription)</string>
     <string name="payment_method_fortumo" context="one of the payment methods">Mobile Carrier (one-off)</string>
     <string name="payment_method_google_wallet" context="one of the payment methods">Google Wallet</string>
