--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -215,15 +215,11 @@
 	<string name="file_properties_shared_folder_list_shares" context="when listing all the contacts that shares a folder">Compartido con</string>
 	<string name="file_properties_send_file_select_contact" context="send a file to a MEGA user">Enviar a</string>
 	<string name="file_properties_owner" context="shows the owner of an incoming shared folder">Propietario</string>
-	
-	<string name="contact_properties_activity" context="title of the contact properties screen">Info</string>
-	
-	<string name="contact_file_list_activity" context="header of a status field for what content a user has shared to you">Contenido</string>
-	
-	<string name="contact_shared_files" context="title of the screen where the folders are shown with the contact owner of those folders">Compartir carpetas con:</string>
-	
-	<string name="contacts_list_empty_text" context="Adding new relationships (contacts) using the actions.">Añadir nuevos contactos usando el botón inferior.</string>	
-	
+	<string name="contact_reinvite" context="option to reinvite a contact">Reinvitar</string>
+	<string name="contact_properties_activity" context="title of the contact properties screen">Info</string>	
+	<string name="contact_file_list_activity" context="header of a status field for what content a user has shared to you">Contenido</string>	
+	<string name="contact_shared_files" context="title of the screen where the folders are shown with the contact owner of those folders">Compartir carpetas con:</string>	
+	<string name="contacts_list_empty_text" context="Adding new relationships (contacts) using the actions.">Añadir nuevos contactos usando el botón inferior.</string>		
 	<string name="error_not_enough_free_space" context="Error message">No hay suficiente espacio</string>
 	
 	<string name="download_failed" context="Error message">Descarga fallida</string>
